--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -78,6 +78,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-10-18">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-10-18-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/b9df39e5d5485e2cc4800be641032094.webp" alt="「10月18日」最高速度21.7M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-10-18-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月18日」最高速度21.7M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、日本、韩国、新加坡、美国、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-10-17">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-10-17-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「10月17日」最高速度18.4M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-10-17-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月17日」最高速度18.4M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、日本、韩国、香港、美国、欧洲、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-10-16">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-10-16-node-share-links.htm" class="xcblog-blog-url">
@@ -182,32 +208,6 @@
                                     <p>这一次的节点更新覆盖了欧洲、新加坡、美国、韩国、香港、加拿大、日本等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-10-08">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-10-8-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「10月8日」最高速度21.6M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-10-8-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月8日」最高速度21.6M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、加拿大、美国、欧洲、新加坡、韩国、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-10-07">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-10-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「10月7日」最高速度23M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-10-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月7日」最高速度23M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、欧洲、美国、韩国、新加坡、香港、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -218,16 +218,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-v2ray.htm" title="「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月1日」最高速度22.7M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-23-node-share-links.htm" title="「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-v2ray-subscribe.htm" title="「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-26-free-v2ray.htm" title="「9月26日」最高速度18.3M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「9月26日」最高速度18.3M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-28-free-subscribe-node.htm" title="「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-16-node-share-links.htm" title="「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-20-free-v2ray-subscribe.htm" title="「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe-links.htm" title="「10月1日」最高速度18.7M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「10月1日」最高速度18.7M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-free-node-subscribe-links.htm" title="「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度20.2M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-9-free-node-subscribe.htm" title="「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-3-free-v2ray.htm" title="「10月3日」最高速度21.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「10月3日」最高速度21.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-free-v2ray-subscribe.htm" title="「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-30-free-v2ray-subscribe.htm" title="「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-13-free-high-speed-nodes.htm" title="「10月13日」最高速度19.1M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「10月13日」最高速度19.1M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-29-free-high-speed-nodes.htm" title="「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -239,7 +239,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
